# Async-Web-Crawler

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: runner.py
src/web_crawler/: __init__.py  async_web_crawler.py  config.py
testserver/: server.py
testserver/html/: index.html  level1a.html  level2a.html  level2b.html  level2c.html  level3a.html  level3b.html
